SERVER-40687 stricter checking on positional operator field